infrastructure/k8s/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-api
  namespace: ecommerce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-api
  template:
    metadata:
      labels:
        app: django-api
    spec:
      containers:
      - name: django-api
        image: agrosphere/django-api:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /healthz/
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz/
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 20
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
