infrastructure/k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-api-service
  namespace: ecommerce
spec:
  selector:
    app: django-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
